HU2 Funcionando con excepciones en postman y postgres. Falta doc con swagger y pasa solo 20% de testing